manifests/distributions/rhaii/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rhaii-dashboard
spec:
  selector:
    deployment: rhaii-dashboard
  ports:
    - name: dashboard
      protocol: TCP
      port: 8443
      targetPort: dashboard
